[package]
name = "znes"
version = "0.1.0"
authors = ["Zac Joffe <zacharyjoffe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
sdl2 = "0.34.0"
clap = "3.0.0-beta.1"
cpuprofiler = "0.0.4"
